@@ -1,7 +1,8 @@
 Version 4.9.9 (TBD)
     Fixed table selection not functioning correctly in Edge 44 or higher #TINY-3862
-    Fixed `forced_root_block_attrs` setting not applying to new blocks consistently #TINY-4564
     Fixed table resize handles not functioning correctly in Microsoft Edge #TINY-4160
+    Fixed `forced_root_block_attrs` setting not applying to new blocks consistently #TINY-4564
+    Fixed failing to initialize if a script tag was used inside an SVG #TINY-4087
 Version 4.9.8 (2020-01-28)
     Fixed the `mobile` theme failing to load due to a bundling issue #TINY-4613
     Fixed security issue related to parsing HTML comments and CDATA #TINY-4544
